# ChatServer

./: .gitignore  CMakeLists.txt  README.md  autobuild.sh  create.sql
include/: MsgType.hpp
include/server/: ChatServer.hpp  ChatService.hpp  FriendModel.hpp  Group.hpp  GroupModel.hpp  GroupUser.hpp  OfflineMsgModel.hpp  User.hpp  UserModel.hpp
include/server/database/: ConnectionPool.hpp  MySQL.hpp  MysqlConn.hpp
include/server/redis/: Redis.hpp
src/client/: TcpClient.cc
src/server/: CMakeLists.txt  ChatServer.cc  ChatService.cc  FriendModel.cc  GroupModel.cc  OfflineMsgModel.cc  UserModel.cc  main.cc
src/server/database/: ConnectionPool.cc  MySQL.cc
src/server/redis/: Redis.cc
test/: main.cpp
test/connectionpooltest/: connectionPool.cc
test/muduotest/: main.cpp
